--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tahsina Moiukh</title>
+  <link rel="icon" href="favicon4.png" type="image/png">
   <style>
     body {
       font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
