changed font size

--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,18 @@
     }
 
     .container {
-    background-color: #ffffff; 
+    background-color: #ffffff; /* White background */
     width: 100%;
     max-width: 850px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(1, 0, 0, 0.5); 
+    box-shadow: 0 4px 8px rgba(1, 0, 0, 0.5); /* Shadow effect */
     border-radius: 30px; /* Rounded corners for the container */
     margin-top: 60px;  /* Adds space from the top */
     margin-bottom: 60px;
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* Align the text to the left */
+    scroll-behavior: smooth;
 }
     nav {
       display: flex;
