--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ nav a:hover {
     }
 
     .shining-text {
-      font-size: 1.5em;
+      font-size: 1.1em;
       font-weight: bold;
       color: #292828;
       letter-spacing: 2.5px;
@@ -185,7 +185,7 @@ nav a:hover {
 
 .research-interest-label {
   font-size: 1em;
-  margin-left: 450px; 
+  margin-left: 530px; 
   margin-top: -110px;
   color: #000000;
   text-align: right;
@@ -366,7 +366,7 @@ the model’s shortcomings and potential areas for development. Currently, we ar
       <div style="margin-bottom: 30px; position: relative;">
         <div style="position: absolute; width: 10px; height: 10px; background-color: #6c757d; border-radius: 50%; left: -21.5px; top: 5px;"></div>
         <h4 style="color: rgb(59, 59, 59);">Frameworks</h4>
-        <div> PyTorch, Tensorflow, Django REST, ReactJS, Node.js, Express, Git, LaTeX
+        <div> PyTorch, Tensorflow, ReactJS, Node.js, Express, Git, LaTeX
         </div>
       <div style="margin-bottom: 30px; position: relative;">
         <div style="position: absolute; width: 10px; height: 10px; background-color: #6c757d; border-radius: 50%; left: -21.5px; top: 5px;"></div>
