--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* Align the text to the left */
+    scroll-behavior: smooth;
 }
     nav {
       display: flex;
@@ -47,7 +48,7 @@
   border: 1px solid #000000; /* Border color matches the theme */
   border-radius: 10px; /* Rounded corners for the box */
   padding: 10px 40px; /* Inner spacing */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for a lifted effect */
   width: fit-content; /* Shrinks the nav box to fit content */
   margin-left: auto; /* Pushes the nav to the right */
 }
