--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@ a {
     <div class="name-container">
         <h1 class="big-name" >Tahsina Moiukh</h1>
         <div>
-            <a href="mailto:tahsina.moiukh@g.bracu.ac.bd" target="_blank">
+            <a href="mailto:moiukh29@g.bracu.ac.bd" target="_blank">
                 <i class="fas fa-envelope"></i>
             </a>
               <a href="https://github.com/moiukht" target="_blank">
                 <i class="fab fa-github"></i>
               </a> 
-            <a href="https://www.linkedin.com/in/tahsina-m-8947472a4/" target="_blank">
+            <a href= "www.linkedin.com/in/tahsina-moiukh" target="_blank">
                 <i class="fab fa-linkedin"></i>
               </a> 
         </div>
