--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ a {
     <div class="name-container">
         <h1 class="big-name" >Tahsina Moiukh</h1>
         <div>
-            <a href="mailto:moiukh29@g.bracu.ac.bd" target="_blank">
+            <a href="mailto:moiukh29@gmail.com" target="_blank">
                 <i class="fas fa-envelope"></i>
             </a>
               <a href="https://github.com/moiukht" target="_blank">
