--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ a {
               <a href="https://github.com/moiukht" target="_blank">
                 <i class="fab fa-github"></i>
               </a> 
-            <a href="www.linkedin.com/in/tahsina-moiukh" target="_blank">
+            <a href="https://www.linkedin.com/in/tahsina-moiukh/" target="_blank">
                 <i class="fab fa-linkedin"></i>
               </a> 
         </div>
